# rust-wasm-cgol

./: game.js  index.html  index.js  index2.js  main.css  run.sh
js/: game.js  uxui.js
wasm-cgol/: Cargo.toml
wasm-cgol/src/: lib.rs
