[package]
name = "wasm-cgol"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
rayon = { version = "1.10", optional = true }
web-sys = { version = "0.3", features = ['console'], optional = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O4",
]